--- a/server/package.json
+++ b/server/package.json
@@ -9,6 +9,7 @@
   "author": "Allan Juma",
   "license": "ISC",
   "dependencies": {
+    "apollo-server-express": "^3.12.1",
     "axios": "^1.5.1",
     "bcrypt": "^5.1.1",
     "body-parser": "^1.20.2",
@@ -17,6 +18,7 @@
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "express-validator": "^7.0.1",
+    "graphql": "^16.8.1",
     "helmet": "^7.0.0",
     "jsonwebtoken": "^9.0.2",
     "moduleraid": "^6.2.0",
