--- a/server/package.json
+++ b/server/package.json
@@ -4,6 +4,8 @@
   "description": "",
   "main": "server.js",
   "scripts": {
+    "start": "node server.js",
+    "dev": "nodemon server.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "Allan Juma",
@@ -28,7 +30,7 @@
     "qrcode-terminal": "^0.12.0",
     "socket.io": "^4.7.2",
     "uuid": "^9.0.1",
-    "whatsapp-web.js": "^1.22.1",
+    "whatsapp-web.js": "^1.23.0",
     "yup": "^1.3.2"
   }
 }
