--- a/server/package.json
+++ b/server/package.json
@@ -11,7 +11,6 @@
   "author": "Allan Juma",
   "license": "ISC",
   "dependencies": {
-    "apollo-server-express": "^3.12.1",
     "axios": "^1.5.1",
     "bcrypt": "^5.1.1",
     "body-parser": "^1.20.2",
@@ -23,6 +22,7 @@
     "graphql": "^16.8.1",
     "helmet": "^7.0.0",
     "jsonwebtoken": "^9.0.2",
+    "module-alias": "^2.2.3",
     "moduleraid": "^6.2.0",
     "mongoose": "^7.5.3",
     "nodemon": "^3.0.1",
@@ -31,6 +31,19 @@
     "socket.io": "^4.7.2",
     "uuid": "^9.0.1",
     "whatsapp-web.js": "^1.23.0",
+    "winston": "^3.11.0",
     "yup": "^1.3.2"
+  },
+  "_moduleAliases": {
+    "@root": ".",
+    "@config": "./src/config",
+    "@controllers": "./src/controllers",
+    "@middleware": "./src/middleware",
+    "@models": "./src/models",
+    "@routes": "./src/routes",
+    "@services": "./src/services",
+    "@validations": "./src/validations",
+    "@utils": "./src/utils",
+    "@yupschemas": "./src/yupschemas"
   }
 }
