--- a/server/package.json
+++ b/server/package.json
@@ -2,10 +2,10 @@
   "name": "server",
   "version": "1.0.0",
   "description": "",
-  "main": "server.js",
+  "main": "src/server.js",
   "scripts": {
-    "start": "node server.js",
-    "dev": "nodemon server.js",
+    "start": "node src/server.js",
+    "dev": "nodemon src/server.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "Allan Juma",
@@ -33,17 +33,5 @@
     "whatsapp-web.js": "^1.23.0",
     "winston": "^3.11.0",
     "yup": "^1.3.2"
-  },
-  "_moduleAliases": {
-    "@root": ".",
-    "@config": "./src/config",
-    "@controllers": "./src/controllers",
-    "@middleware": "./src/middleware",
-    "@models": "./src/models",
-    "@routes": "./src/routes",
-    "@services": "./src/services",
-    "@validations": "./src/validations",
-    "@utils": "./src/utils",
-    "@yupschemas": "./src/yupschemas"
   }
 }
