--- a/server/package.json
+++ b/server/package.json
@@ -22,9 +22,9 @@
     "graphql": "^16.8.1",
     "helmet": "^7.0.0",
     "jsonwebtoken": "^9.0.2",
-    "module-alias": "^2.2.3",
     "moduleraid": "^6.2.0",
     "mongoose": "^7.5.3",
+    "morgan": "^1.10.0",
     "nodemon": "^3.0.1",
     "puppeteer": "^21.3.6",
     "qrcode-terminal": "^0.12.0",
