--- a/server/package.json
+++ b/server/package.json
@@ -18,6 +18,7 @@
     "cors": "^2.8.5",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
+    "express-session": "^1.18.0",
     "express-validator": "^7.0.1",
     "graphql": "^16.8.1",
     "helmet": "^7.0.0",
@@ -26,6 +27,8 @@
     "mongoose": "^7.5.3",
     "morgan": "^1.10.0",
     "nodemon": "^3.0.1",
+    "passport": "^0.7.0",
+    "passport-google-oauth20": "^2.0.0",
     "puppeteer": "^21.3.6",
     "qrcode-terminal": "^0.12.0",
     "socket.io": "^4.7.2",
