--- a/server/package.json
+++ b/server/package.json
@@ -26,6 +26,7 @@
     "moduleraid": "^6.2.0",
     "mongoose": "^7.5.3",
     "morgan": "^1.10.0",
+    "multer": "^1.4.5-lts.1",
     "nodemon": "^3.0.1",
     "passport": "^0.7.0",
     "passport-google-oauth20": "^2.0.0",
